<resources>
    <string name="app_name">SafeLocker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_map_api_key">"AIzaSyAn1drQkU6WqrSyLl2KyBJJG2e5KZ64RRc"</string>
    <string name="title_activity_tela_principal_cliente">Tela_principal_cliente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dados_compra">Dados da compra</string>
    <string name="localizacao">Localização</string>
    <string name="teste">Teste</string>
    <string name="escolha_duracao">Escolha a duração</string>
    <string name="trinta_min">30 minutos: </string>
    <string name="preco_teste">R$ 15,00</string>
    <string name="uma_hora">1 hora: </string>
    <string name="duas_horas">2 horas: </string>
    <string name="quatro_horas">4 horas: </string>
    <string name="pagamento">Pagamento</string>
    <string name="adicionar_cartao">Adicionar cartão de crédito</string>
    <string name="info1">Um calção de 300 reais será cobrado e</string>
    <string name="info2">extornado ao final da locação, de acordo com</string>
    <string name="info3">o período utilizado do armário</string>
    <string name="btn_pagar">Pagar</string>
    <string name="safe">Safe</string>
    <string name="locker">Locker</string>
    <string name="login_registro">Realize o login ou registre para alugar o armários</string>
    <string name="btn_login">Login</string>
    <string name="btn_registrar">Registrar</string>
    <string name="esqueceu_senha">Esqueceu a senha</string>
    <string name="recuperar_senha">Digite seu email para recuperar sua senha</string>
    <string name="btn_recuperar">Recuperar</string>
    <string name="tem_conta">Já tem uma conta?</string>
    <string name="entrar">Entrar</string>
    <string name="btn_mapa">Mapa</string>
    <string name="btn_voltar">Voltar</string>
    <string name="minhas_locacoes">Minhas locações</string>
    <string name="qr_code">Mostre o QrCode para o gerente</string>
    <string name="sub_texto_qr_code">Só mais um pouquinho para alugar seu armário</string>
    <string name="unidade">Unidade:</string>
    <string name="gerente">Gerente:</string>
    <string name="armario">Armário:</string>
    <string name="rua">Rua:</string>
    <string name="btn_alugar">Alugar</string>
    <string name="btn_rota">Rota</string>
    <string name="btn_salvar">Salvar</string>
    <string name="insira_dados">Insera os Dados do cartão:</string>
    <string name="ver_info">Alugar</string>
    <string name="meus_cartoes">Meus cartões</string>
    <string name="btn_cadastrar_cartao">Cadastrar cartão</string>
    <string name="btn_remover_cartao">Remover cartão</string>
    <string name="QRCode">QRCode</string>
    <string name="btn_entrar">Entrar</string>
    <string name="faca_login">Faça o Login para continuar !</string>
    <string name="esqueceu">Esqueceu a</string>
    <string name="senha">senha ?</string>
    <string name="nao_tem_conta">Ainda não tem uma conta?</string>
    <string name="criar_conta">Criar conta</string>
    <string name="faca_cadastro">Faça o Cadastro para continuar !</string>
    <string name="ja_tem_conta">Já tem uma Conta ?</string>
    <string name="sinta_se_seguro">Sinta-se seguro em todos os momentos</string>
    <string name="armario2">Armário</string>
    <string name="btn_cartoes">Cartões</string>
    <string name="btn_meus_armarios">Meus Armários</string>
    <string name="btn_info">Informações</string>
    <string name="btn_compras">Compras Pendentes</string>
    <string name="btn_locacoes">Locações</string>
    <string name="sair">Sair</string>
    <string name="hint_email">Email</string>
    <string name="hint_cvv">CVV</string>
    <string name="hint_validadeAno">Ano</string>
    <string name="hint_validadeMes">Mês</string>
    <string name="hint_numero">Número do cartão</string>
    <string name="hint_nome_cartao">Nome no Cartão</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_confirmar_senha">Confirmar senha</string>
    <string name="hint_data">Data de nascimento</string>
    <string name="hint_telefone">Telefone</string>
    <string name="btn_liberarLocacao">Liberar Locação</string>
    <string name="btn_abrirArmario">Abrir Armário</string>
    <string name="sucesso">Sucesso!</string>
    <string name="qrcode_valido">QrCode Válido</string>
    <string name="txt_quantidade_pessoas1">Selecione a quantidade de pessoas</string>
    <string name="txt_quantidade_pessoas2">que terão acesso ao armário</string>
    <string name="uma_pessoa">Uma pessoa</string>
    <string name="duas_pessoas">Duas pessoas</string>
    <string name="btn_continuar">Continuar</string>
    <string name="escanear_qrcode">Escanear QrCode</string>
    <string name="email_exemplo">Seu texto de email aqui</string>
    <string name="foto">Foto</string>
    <string name="qrcode_invalido">QR Code Inválido</string>
    <string name="btn_prosseguir">Prosseguir</string>
    <string name="txt_qrcode">O QR Code escaneado não contém uma locação válida</string>
    <string name="ler_nfc">Ler NFC</string>
    <string name="aproximar_nfc">Aproxime a pulseira NFC</string>
    <string name="segunda_foto">Segunda foto</string>
    <string name="acesso_armario">Acesso ao armário</string>
    <string name="escolha_uma_opcao">Escolha uma opção</string>
    <string name="abrir_momentaneamente">Abrir\nMomentaneamente</string>
    <string name="encerrar_locacao">Encerrar locação</string>
    <string name="armario_aberto">O armário está aberto!</string>
    <string name="txt_armario_aberto">Lembre de avisar ao cliente para\nfechar a porta quando terminar de\nutilizar o armário</string>
    <string name="btn_voltar_menu">Voltar ao menu</string>
    <string name="confirmar_locador">Confirmar locador</string>
    <string name="locador">Locador</string>
    <string name="locacao_encerrada">Locação encerrada</string>
    <string name="nfc">NFC</string>
    <string name="aproximar_pulseira">Aproxime a pulseira NFC\npara limpar os dados\nde acesso</string>
    <string name="nao_ha_armarios">Não há armários disponíveis!</string>

</resources>
