<?xml version="1.0" encoding="utf-8"?>
<!--Iniciando layout principal onde todas as informacoes da pagina serao inseridas-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Cor_padrao"
    tools:context=".safelocker.Activity_QrCodeScanner">

    <!--Texto informativo - Título da página-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/sucesso"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Inserindo cor de fundo do aplicativo - Layout onde serao exibidas as informacoes principais-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_colorwhite"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Horizontal Guideline -  linha invisível na tela que pode ser usada como referência para posicionar outros elementos-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp" />

        <!--Texto informativo - Retorna uma mensagem de sucesso da ação anterior informando que o armário está aberto-->
        <TextView
            android:id="@+id/tv_subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/armario_aberto"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!--Texto informativo - Lembrete para usuário-->
        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/txt_armario_aberto"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_subTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!--Botão de ação "Voltar ao menu" que garante que a ação foi finalizada-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_voltar"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_voltar_menu"
            android:textColor="@color/white"
            android:background="@drawable/bckground_btn_register"
            android:backgroundTint="@color/Cor_padrao"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            />

        <!--Imagem ilustrativa-->
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:src="@drawable/armario_aberto"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
