<?xml version="1.0" encoding="utf-8"?>
<!--Iniciando layout principal onde todas as informacoes da pagina serao inseridas-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Cor_padrao"
    tools:context=".safelocker.Activity_Bifurcacao_De_Usuario">

    <!--Botão padrão para "Voltar" à tela anterior-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_Voltar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="38dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!--Logo do app-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/safe"
        android:textColor="@color/white"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <!--Logo do app-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/locker"
        android:textColor="@color/SegundaCorPadrao"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Imagem ilustrativa-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="367dp"
        android:layout_height="469dp"
        android:layout_marginTop="112dp"
        android:src="@drawable/imagembifurcacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Texto informativo - Titulo da pagina-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="352dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_registro"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

    <!--Container que armazena botões de cadastrar/ registrar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:background="@drawable/navigation_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4"
        app:layout_constraintVertical_bias="1.0">

        <!--Botão registrar que direciona o usuario para tela de cadastro-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistrar"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bckground_btn_register"
            android:backgroundTint="@color/SegundaCorPadrao"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/btn_registrar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.68"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLoin" />

        <!--Botão de Login que direciona o usuario para tela de login-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoin"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/bckground_btn_register"
            android:backgroundTint="@color/Cor_padrao"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.702"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
